@@ -171,7 +171,7 @@ import|;
 end_import
 
 begin_comment
-comment|/**  * A DocMaker using the (compressed) Trec collection for its input.  */
+comment|/**  * A DocMaker using the (compressed) Trec collection for its input.  *<p>  * Config properties:<ul>  *<li>work.dir=&lt;path to the root of docs and indexes dirs| Default: work&gt;</li>  *<li>docs.dir=&lt;path to the docs dir| Default: trec&gt;</li>  *</ul>  */
 end_comment
 
 begin_class
@@ -285,6 +285,22 @@ argument_list|(
 name|config
 argument_list|)
 expr_stmt|;
+name|File
+name|workDir
+init|=
+operator|new
+name|File
+argument_list|(
+name|config
+operator|.
+name|get
+argument_list|(
+literal|"work.dir"
+argument_list|,
+literal|"work"
+argument_list|)
+argument_list|)
+decl_stmt|;
 name|String
 name|d
 init|=
@@ -302,11 +318,7 @@ operator|=
 operator|new
 name|File
 argument_list|(
-operator|new
-name|File
-argument_list|(
-literal|"work"
-argument_list|)
+name|workDir
 argument_list|,
 name|d
 argument_list|)
