@@ -506,6 +506,11 @@ Here is a list of currently defined properties:
 </p>
 <ol>
 
+  <li><b>Root directory for data and indexes:</b></li>
+    <ul><li>work.dir (default is System property "benchmark.work.dir" or "work".)
+    </li></ul>
+  </li>
+
   <li><b>Docs and queries creation:</b></li>
     <ul><li>analyzer
     </li><li>doc.maker
